# DL-code-for-detailed-routing

./: .gitignore  README.md  requirements.txt
data/dataset/: DRC value prediction residual for window size = 1.csv  DRC value prediction residual for window size = 10.csv  DRC value prediction residual for window size = 2.csv  DRC value prediction residual for window size = 3.csv  DRC value prediction residual for window size = 4.csv  DRC value prediction residual for window size = 5.csv  DefaultStrategy.txt  Number of iterations prediction residual for window size = 10.csv  Number of iterations prediction residual for window size = 2.csv  Number of iterations prediction residual for window size = 3.csv  (+8 more)
src/: CartPole.ipynb  DQN.ipynb  DRC value prediction residual for window size = 2.csv  DRC value prediction residual for window size = 20.csv  DREnv.ipynb  Hello World Model.ipynb  LSTM-Copy1.ipynb  LSTM.ipynb  Number of iterations prediction residual for window size = 1.csv  Number of iterations prediction residual for window size = 2.csv  Number of iterations prediction residual for window size = 20.csv  Number of iterations prediction residual for window size = 4.csv  Number of iterations prediction residual for window size = 5.csv  PPO.ipynb  RLLSTM.ipynb  RNN.ipynb  RNNCustomDataset.ipynb  dataPreprocessing.ipynb  defaultStrategy.csv  ny-stock-price-prediction-custom-dataset.ipynb  outputs.txt  prediction residual for window size = 1.csv  prediction residual for window size = 2.csv  prediction residual for window size = 5.csv  recurrent-neural-network-with-pytorch.ipynb  reinforcement_ppo.ipynb  scratch.ipynb
src/deploy/: CMakeLists.txt  FlexDR.cpp  README.md  config.py  dqn.cpp  env.h  env.py  helloWorld.cpp  helloWorld.py  lstm.cpp  modelOps.py  train.py  utils.py
src/deploy/LSTM/: CMakeLists.txt  lstm.cpp
src/deploy/data/: dumpFile.txt
src/deploy/dqn/: CMakeLists.txt  DQNTest.cpp  DQNTrain.cpp  FlexDR.cpp  README.md  dqn.cpp  main.cpp  testEnv.cpp
src/deploy/dqn/env/: CMakeLists.txt  Makefile  cmake_install.cmake  env.cpp  env.h  helloWorld.cpp  helloWorld.h  memory.h  test.cpp
src/deploy/dqn/scratchPaper/: CMakeLists.txt  main.cpp  test.cpp  test.h
src/deploy/file/: file.cpp  file.h
(+910 files in other folders)
